--- a/src/app/summary/summary.component.html
+++ b/src/app/summary/summary.component.html
@@ -3,7 +3,7 @@
   <div class="d-flex">
     <div class="d-flex">
       <div class="small align-text-top p-1">GRIN</div>
-      <div class="pl-0 ml-0 h2 align-self-baseline">{{walletInfo.total}}</div>
+      <div class="pl-0 ml-0 h2 align-self-baseline">{{amountAsHr(walletInfo.total, 2)}}</div>
     </div>
     <div class="p-2 align-self-top">
       <fa-icon icon="sync-alt"></fa-icon>
