Make refreshing wallet more consistent, add height view.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="d-flex bg-dark">
   <app-menu class="d-flex w-100"></app-menu>
-  <div class="d-flex bg-secondary ml-auto">
+  <div class="d-flex bg-secondary ml-auto w-25">
     <app-summary></app-summary>
   </div>
 </div>
@@ -12,6 +12,7 @@
   </ol>
 
 </div>
+<app-refresher></app-refresher>
 <div class="ml-3">
   <router-outlet></router-outlet>
 </div>
