Some basic error handling.

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -43,9 +43,7 @@
     </li-->
  <div class="d-flex flex-column text-white p-3 justify-content-center m-0 ml-auto">
   <div class="small font-weight-bold text-right">GRIN</div>
-  <div class="d-flex">
-    <div class="pl-0 ml-0 h3 ">{{walletService.currentNodeHeight}}</div>
-  </div>
+    <div class="pl-0 ml-0 h3 text-right ">{{walletService.currentNodeHeight}}</div>
   <div class="small text-right" style="position: relative; bottom: 8px;">
       Chain Height
   </div>
