Adding (very rough and rudimentary) ability to send.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,6 +13,7 @@
 
 </div>
 <app-refresher></app-refresher>
+<app-sender></app-sender>
 <div class="ml-3">
   <router-outlet></router-outlet>
 </div>
