--- a/src/app/outputs/outputs.component.html
+++ b/src/app/outputs/outputs.component.html
@@ -6,7 +6,7 @@
 
 <div class="container-fluid">
   <h3>Outputs for Wallet: Personal</h3>
-  <p>As of Block: {{walletService.walletInfo.current_height}}</p>
+  <p>As of Block: {{walletService.walletInfo?.current_height}}</p>
   <table class="table table-sm table-hover table-striped table-responsive">
     <thead>
        <th>Amount</th>
