--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -11,7 +11,7 @@
       </a>
     </li>
     <li class="nav-item p-1">
-      <a class="nav-link" href="#">
+      <a class="nav-link" (click)="walletService.showSender();">
         <div style="text-align: center">
           <fa-icon icon="arrow-alt-circle-up" size="2x"></fa-icon>
         </div>
