More updates and tweaks.. displayed wallet info should stay consistent

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,8 +7,8 @@
 <div style="background: #DCDCDC;">
 
   <ol class="breadcrumb ml-3 bg-transparent">
-    <li class="breadcrumb-item"><a href="#">Wallets</a></li>
-    <li class="breadcrumb-item active">Personal</li>
+    <li class="breadcrumb-item"><a routerLink="/wallet-info">Wallet</a></li>
+    <li class="breadcrumb-item active">{{subCrumb}}</li>
   </ol>
 
 </div>
