--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -3,11 +3,11 @@
   <!-- Links -->
   <ul class="navbar-nav">
     <li class="nav-item p-1">
-      <a class="nav-link" href="#">
+      <a class="nav-link" routerLink="/wallet-info">
         <div style="text-align: center">
           <fa-icon icon="wallet" size="2x"></fa-icon>
         </div>
-        <div class="small m-1">WALLETS</div>
+        <div class="small m-1">WALLET</div>
       </a>
     </li>
     <li class="nav-item p-1">
