update for master, add beginnings of Wallet TX display functionality

--- a/src/app/outputs/outputs.component.html
+++ b/src/app/outputs/outputs.component.html
@@ -21,6 +21,7 @@
       <th>Lock Height</th>
       <th>Coinbase?</th>
       <th>Block</th>
+      <th>Transaction Id</th>
 
     </thead>
     <tbody>
@@ -34,6 +35,7 @@
     <td class="">{{output.lock_height}}</td>
     <td class="">{{output.is_coinbase}}</td>
     <td class="">{{output.block}}</td>
+    <td class="">{{output.tx_log_entry}}</td>
     </tr>
     </tbody>
   </table>
