--- a/src/app/wallet-info/wallet-info.component.html
+++ b/src/app/wallet-info/wallet-info.component.html
@@ -16,24 +16,24 @@
       <tbody>
       <tr class="table-primary">
         <td>Total</td>
-        <td class="text-right">{{amountAsHr(walletService.walletInfo?.total, 9)}}</td>
+        <td class="text-right">{{util.amountAsHr(walletService.walletInfo?.total, 9)}}</td>
       </tr>
       <tr>
         <td>Awaiting Confirmation</td>
-        <td class="text-right">{{amountAsHr(walletService.walletInfo?.amount_awaiting_confirmation, 9)}}</td>
+        <td class="text-right">{{util.amountAsHr(walletService.walletInfo?.amount_awaiting_confirmation, 9)}}</td>
       </tr>
       <tr>
         <td>Immature Coinbase
-        <td class="text-right">{{amountAsHr(walletService.walletInfo?.amount_immature,9)}}</td>
+        <td class="text-right">{{util.amountAsHr(walletService.walletInfo?.amount_immature,9)}}</td>
       </tr>
 
       <tr class="table-success">
         <td>Currently Spendable</td>
-        <td class="text-right">{{amountAsHr(walletService.walletInfo?.amount_currently_spendable, 9)}}</td>
+        <td class="text-right">{{util.amountAsHr(walletService.walletInfo?.amount_currently_spendable, 9)}}</td>
       </tr>
       </tbody>
     </table>
-    <div class="small">({{amountAsHr(walletService.walletInfo?.amount_locked,9)}} is locked pending transaction
+    <div class="small">({{util.amountAsHr(walletService.walletInfo?.amount_locked,9)}} is locked pending transaction
       confirmations)
     </div>
     <p></p>
