tie data loads to navigation end, to ensure views are updated when wallet is refreshed from node

--- a/src/app/components/single/wallet-home/wallet-home.component.html
+++ b/src/app/components/single/wallet-home/wallet-home.component.html
@@ -9,7 +9,7 @@
       </div>
 
       <app-wallet-info-detail></app-wallet-info-detail>
-      <button class="btn btn-primary" (click)="refreshWalletInfo()">Update and Validate against Node
+      <button class="btn btn-primary" (click)="refreshFromNode()">Update and Validate against Node
       </button>
     </div>
     <div class="w-50 ml-4">
