--- a/src/app/components/single/output-list-display/output-list-display.html
+++ b/src/app/components/single/output-list-display/output-list-display.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <h3>Wallet Outputs</h3>
-  <p>Validated as of Block: {{walletService.walletInfo?.last_confirmed_height}} ({{walletService.currentNodeHeight-walletService.walletInfo?.last_confirmed_height}} Blocks Ago)</p>
+  <p>Validated as of Block: {{info?.last_confirmed_height}} ({{walletService.currentNodeHeight-info?.last_confirmed_height}} Blocks Ago)</p>
   <a routerLink="/wallet-info">
     Show Summary
   </a>
