--- a/src/app/components/reusable/output-listing/output-listing.component.html
+++ b/src/app/components/reusable/output-listing/output-listing.component.html
@@ -1,29 +1,27 @@
-<table class="table table-sm table-hover table-striped">
+<table class="table table-sm w-100 table-hover table-striped">
   <thead>
+  <th>Block Height</th>
   <th>Amount</th>
   <th>Status</th>
-  <th>Block Height</th>
-  <th>Root Key ID</th>
-  <th>Key Id</th>
-  <th>Child Key Index</th>
-  <th>Lock Height</th>
-  <th>Coinbase?</th>
-  <th>Block</th>
-  <th>Transaction Id</th>
-
+  <th>Locked Until</th>
+  <th *ngIf="!condensed">Child Key Index</th>
+  <th *ngIf="!condensed">Root Key ID</th>
+  <th *ngIf="!condensed">Key Id</th>
+  <th *ngIf="!condensed">Coinbase?</th>
+  <th *ngIf="!condensed">Transaction Id</th>
   </thead>
+
   <tbody>
   <tr *ngFor="let output of outputs">
-    <td> {{util.amountAsHr(output.value, 9)}}</td>
-    <td class="">{{output.status}}</td>
-    <td class="">{{output.height}}</td>
-    <td class="">{{output.root_key_id}}</td>
-    <td class="">{{output.key_id}}</td>
-    <td class="">{{output.n_child}}</td>
-    <td class="">{{output.lock_height}}</td>
-    <td class="">{{output.is_coinbase}}</td>
-    <td class="">{{output.block}}</td>
-    <td class="">{{output.tx_log_entry}}</td>
+    <td>{{output.height}}</td>
+    <td>{{util.amountAsHr(output.value, 9)}}</td>
+    <td>{{output.status}}</td>
+    <td>{{output.lock_height}}</td>
+    <td *ngIf="!condensed">{{output.n_child}}</td>
+    <td *ngIf="!condensed">{{output.root_key_id}}</td>
+    <td *ngIf="!condensed">{{output.key_id}}</td>
+    <td *ngIf="!condensed">{{output.is_coinbase}}</td>
+    <td *ngIf="!condensed">{{output.tx_log_entry}}</td>
   </tr>
   </tbody>
 </table>
